--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,50 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
     <ion-title>
-      Blank
+      <h1>DO STUFF App</h1>
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <ion-item fill="outline">
+    <ion-input placeholder="Stuff to do..." position="fixed" input="text" [(ngModel)]="taskName"></ion-input>
+    <ion-button (click)="addData()" color="dark">Add</ion-button>
+  </ion-item>
+  <br>  
+  <ion-label><h1><ion-icon name="build-outline" size="large"></ion-icon> Stuff NOT done...</h1></ion-label>
+  <ion-list>
+  <ion-item-sliding *ngFor="let item of listData; let i = index;">
+    <div *ngIf="!item.complete">
+    <ion-item>
+      <ion-label>{{item.name}}</ion-label>
+      <ion-checkbox (ionChange)="checkBox(i, item)" slot="start" checked={{item.complete}}></ion-checkbox>
+    </ion-item>
+    <ion-item-options side="end">
+      <ion-item-option color="primary" (click)="removeItem(i)">
+        <ion-icon name="trash" slot="icon-only"></ion-icon>
+      </ion-item-option>
+    </ion-item-options>
+    </div>
+  </ion-item-sliding>
+ </ion-list> 
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+ <br>
+  <ion-label><h1><ion-icon name="beer-outline" size="large"></ion-icon> Stuff DONE!!!</h1></ion-label>
+  <ion-list>
+  <ion-item-sliding *ngFor="let item of listData; let i = index;">
+    <div *ngIf="item.complete">
+    <ion-item>
+      <ion-label>{{item.name}}</ion-label>
+      <ion-checkbox (ionChange)="checkBox(i, item)" slot="start" checked={{item.complete}}></ion-checkbox>
+    </ion-item>
+    <ion-item-options side="end">
+      <ion-item-option color="primary" (click)="removeItem(i)">
+        <ion-icon name="trash" slot="icon-only"></ion-icon>
+      </ion-item-option>
+    </ion-item-options>
+    </div>
+  </ion-item-sliding>
+ </ion-list> 
+
 </ion-content>
