minor style change to b/w

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -28,7 +28,7 @@
 
 ion-content{
   --ion-font-family: 'Courier New', Courier, monospace;
-  --ion-background-color:yellow;
+  --ion-font-color: black; 
 }
 
 ion-header{
